--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/footballSNS/prd/styles/usage/page/app.css">
 </head>
 <body>
+	aaaa
   <script src="/footballSNS/prd/scripts/app.js"></script>
 </body>
 </html>
